--- a/scss/_sidebar-list.scss
+++ b/scss/_sidebar-list.scss
@@ -6,6 +6,7 @@
   background: $sidebar-light-bg;
   overflow: hidden;
   transition: width $action-transition-duration $action-transition-timing-function, background $action-transition-duration $action-transition-timing-function;
+  font-family: $font-family-DBHelvethaicaX-Reg;
 
   @include tablet {
     display: block;
@@ -13,6 +14,9 @@
 
   .sidebar-toggle {
     margin-bottom: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
     background: #8DC63F;
     box-shadow: -1px 1px 8px 0 rgba(141, 198, 63, 0.58);
@@ -22,6 +26,8 @@
 
     span {
       display: none;
+      padding-left: 5px;
+      text-align: left;
     }
 
     i {
@@ -44,6 +50,7 @@
 
     span {
       display: none;
+      width: 100%;
     }
   }
 
@@ -76,10 +83,11 @@
 
     .sidebar-toggle {
       padding-left: 10px;
-      text-align: left;
+      justify-content: flex-start;
 
       span {
         display: inline-block;
+        width: 100%;
       }
     }
 
